[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levels/transitions/level_transition.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("level_transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("level_transition:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="level_transition" type="ColorRect"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="animation_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="animation_player" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="animation_player" to="." method="_on_animation_player_animation_started"]
